Remoção de comentários

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -51,7 +51,6 @@
     userInput.value = '';
     userInput.disabled = true;
 
-    // Adiciona a mensagem de "digitando..."
     appendMessage('FURIA Bot', '<em>Digitando...</em>', 'bot-message typing');
 
     fetch('/get', {
@@ -66,9 +65,7 @@
         return response.json();
     })
     .then(data => {
-        // Simula o delay de digitação (ex: 1 segundo)
         setTimeout(() => {
-            // Remove todas as mensagens com classe 'typing'
             const typingElements = document.querySelectorAll('.typing');
             typingElements.forEach(el => el.remove());
 
@@ -77,7 +74,7 @@
             } else {
                 appendMessage('FURIA Bot', 'Desculpe, não entendi a resposta.', 'bot-message');
             }
-        }, 1000); // 1000 ms = 1 segundo de delay
+        }, 1000);
     })
     .catch(error => {
         console.error(error);
@@ -98,8 +95,8 @@
         messageDiv.className = `message ${className}`;
 
         const avatarSrc = className.includes('user-message')
-            ? "{{ url_for('static', filename='user-avatar.png') }}" // coloque o nome da imagem do usuário
-            : "{{ url_for('static', filename='furia-bot-avatar.png') }}"; // imagem do bot
+            ? "{{ url_for('static', filename='user-avatar.png') }}" 
+            : "{{ url_for('static', filename='furia-bot-avatar.png') }}"; 
 
         messageDiv.innerHTML = `
             <img src="${avatarSrc}" alt="avatar" class="avatar">
@@ -130,18 +127,17 @@
         <p>E muito mais! 👊💥<br>
     `;
 
-    // Adiciona mensagem "digitando..."
+    
     appendMessage('FURIA Bot', '<em>Digitando...</em>', 'bot-message typing');
 
-    // Simula tempo de digitação e mostra mensagem real
+    
     setTimeout(() => {
             const typingElements = document.querySelectorAll('.typing');
             typingElements.forEach(el => el.remove());
 
             appendMessage('FURIA Bot', welcomeMessage, 'bot-message');
-        }, 4000); // 2 segundos de delay
+        }, 4000);
 
-        // Adiciona eventos aos botões rápidos
         document.querySelectorAll("[data-intent]").forEach(btn => {
             btn.addEventListener("click", () => {
                 const intent = btn.getAttribute("data-intent");
@@ -151,11 +147,10 @@
     });
 
     window.addEventListener('DOMContentLoaded', () => {
-    // Remove a tela de boas-vindas após a animação
     setTimeout(() => {
         const welcomeScreen = document.getElementById('welcome-screen');
         welcomeScreen.style.display = 'none';
-    }, 3000); // tempo total da animação + margem
+    }, 3000);
 });
     </script>
 </body>
